<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<HorizontalScrollView
    android:id="@+id/view1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <LinearLayout
    	android:id="@+id/viewlin"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
			<LinearLayout
  				android:orientation="horizontal"
  				android:layout_width="wrap_content"
  				android:layout_height="wrap_content">
    				<Button
        				android:id="@+id/button1"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/map"
        				android:onClick="map" />
    				<Button
        				android:id="@+id/button11"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/lmap"
        				android:onClick="lmap" />
    				<Button
        				android:id="@+id/button2"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/loot"
        				android:onClick="loot" />
    				<Button
        				android:id="@+id/button3"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/weapon"
        				android:onClick="weapon" />
    				<Button
        				android:id="@+id/button4"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/vehicle"
        				android:onClick="vehicle" />
    				<Button
        				android:id="@+id/button5"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/equipment"
        				android:onClick="equipment" />
    				<Button
        				android:id="@+id/button6"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/consume"
        				android:onClick="consume" />
    				<Button
        				android:id="@+id/button10"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/survive"
        				android:onClick="survive" />
    				<Button
        				android:id="@+id/button9"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/servers"
        				android:onClick="serverlist" />
    				<Button
        				android:id="@+id/button8"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/patch"
        				android:onClick="patch" />
    				<Button
        				android:id="@+id/button12"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/reddit"
        				android:onClick="reddit" />
    				
    				<Button
        				android:id="@+id/button7"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/exit"
        				android:onClick="exit" />
    		</LinearLayout>
    </LinearLayout>
</HorizontalScrollView>

<TextView
    android:id="@+id/textView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/swipe"
    android:textAppearance="?android:attr/textAppearanceSmall" />

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>